syntax = "proto3";

package pb;

import "token/token.proto";

option go_package = "github.com/Streamfair/streamfair_token_svc/pb/token";

message ListTokensRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message ListTokensResponse {
    repeated Token tokens = 1;
}